--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,15 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+}
 
 body{
-    margin: 0px;
-    padding: 0px;
-    background-color: rgb(183, 185, 250);
+    background-color: #0c0ce94d;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -12,39 +18,64 @@ body{
 }
 
 div#container{
-    background-color: white;
-    height: 80vh;
+    
+    height: 85vh;
     width: 80%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.300);
+    
     
 }
-
-div#container header{
+div#picture{
+    width: 50%;
     display: flex;
-    justify-self: end;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem ;
+    background-color: white;
     
 }
-
-
-div#content{
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 40px;
-
-
+div#picture img {
+    width: 40vw;
+    height: 85vh;
 }
+
+div.form{
+    width: 50%;
+    display: flex;
+    background-color: #fff;
+    flex-direction: column;
+    padding: 2rem 2rem 0rem 2rem;
+}
+
+.form header{
+    margin-bottom: 1rem;
+    display: flex;
+}
+
+.form header h1::after{
+    content: '';
+    display: block;
+    width: 11rem;
+    height: 0.16rem;
+    background-color: #6c63ff;
+    margin: 4px auto;
+    border-radius: 3px;
+}
+    
 
 div#content-2{
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+   
   
   }
 
+
   h3{
-    margin: 25px;
+    text-align: center;
+    margin: 2vh;
 
   }
 
@@ -60,7 +91,57 @@ h4{
     margin: 5px;
 }
 
+
+div#content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+input{
+    border-color: white;
+    border-style: none;
+    box-shadow: 1px 1px 3px rgba(79, 79, 79, 0.674);
+    margin-bottom: 0.75rem;
+    margin-top: 0.35rem;
+    padding: 0.65rem 0.85rem ;
+    border-radius: 4px;
+}
+
+input.input-image{
+    padding: 0px;
+    height: auto;
+    padding-right: 7px;
+    padding-left: 1.5px;
+}
+
+label{
+    font-size: 0.80rem;
+    font-weight: 600;
+}
+
+
+#buttons{
+    display: flex;
+    justify-content: center;
+    
+    
+}
+
 #buttons button{
-    width: 40vw;
+    width: 30vw;
+    padding: 0.3rem 0rem;
+    background-color: #6c63ff;
+    border-radius: 4px;
+    border: none;
   
+}
+#buttons button a {
+    text-decoration: none;
+    color: white;
+}
+
+#buttons button:hover{
+    background-color: #817cef;
 }
