--- a/CSS/style-forty.css
+++ b/CSS/style-forty.css
@@ -264,6 +264,12 @@ label{
     }
     
 }
+@media (min-width:700px) {
+    #buttons button a {
+        padding: 0rem 40%;
+    }
+    
+}
 
 @media (max-height:670px){
     div#container{
