--- a/CSS/style-portfolio.css
+++ b/CSS/style-portfolio.css
@@ -9,30 +9,39 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.970);
     color: white;
     padding: 2rem 6vw;
 }
 
-nav div#menu a {
+nav  a {
     text-decoration: none;
     margin: 1rem;
     color: grey;
     font-family: Arial, Helvetica, sans-serif;
 }
+nav  a:hover{
+   color: #8741f1;
+}
 
 nav h2 {
     color: rgba(221, 221, 222, 0.701);
     font-family: Arial, Helvetica, sans-serif;
+    transition: 700ms;
+}
+nav h2:hover{
+    background-color: #8741f1;
 }
 
 header{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.970);
     color: white;
     width: 100%;
     height: 400px;
     display: flex;
     align-items: center;
+    position: fixed;
+    z-index: 2;
 }
 
 div#header-content{
@@ -87,3 +96,51 @@ a.contato-button{
     color: white;
     padding: 0.7rem 0.9rem;
 }
+
+div.menu-button{
+    display: none;
+    
+}
+
+div#menu2.none {
+    display: none;
+
+}
+
+
+
+@media (max-width:850px) {
+    div#menu{
+        display: none;
+    }
+    
+    div.menu-button{
+        display: flex;
+        padding-right: 2rem;
+        color: #8741f1;
+    }
+    
+    div#menu2.menu-open{
+        display: flex;
+        text-decoration: none;
+        background-color: white;
+        flex-direction: column;
+        padding: 2rem;
+        width: 600px;
+        flex-wrap: wrap;
+        z-index: 0;
+    
+    
+    }
+    div#menu2.menu-open a {
+        text-decoration: none;
+        color: ;
+    }
+
+    nav{
+        justify-content: space-between;
+    }
+    
+    
+}
+
