--- a/CSS/style-curriculo.css
+++ b/CSS/style-curriculo.css
@@ -174,34 +174,41 @@ p.exp{
     text-align: left;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 footer{
     background-color: rgba(0, 0, 0, 0.900);
     color: white;
-    width: 100%;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding: 1.5rem 1rem;
+    
 }
+
+div.icons-footer i {
+    padding: 0rem 0.5rem;
+    transition: 400ms;
+    color: white;
+    
+    
+    
+}
+
+div.icons-footer i:hover{
+    cursor: pointer;
+    color: #8741f1;
+}
+
+h4.email{
+    color: grey;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid grey;
+}
+
+
+
+
 
 div.menu-button{
     display: none;
