--- a/CSS/style-portfolio.css
+++ b/CSS/style-portfolio.css
@@ -11,7 +11,8 @@ nav{
     align-items: center;
     background-color: rgba(0, 0, 0, 0.970);
     color: white;
-    padding: 2rem 6vw;
+    padding: 2rem 12vw;
+    
 }
 
 nav  a {
@@ -34,19 +35,26 @@ header{
     background-color: rgba(0, 0, 0, 0.970);
     color: white;
     width: 100%;
-    height: 400px;
+    height: 95vh;
     display: flex;
     align-items: center;
     
 }
 
+img{
+    width: 350px;
+    border-radius: 10px;
+    position: relative;
+    top: 52px;
+    left: 14vw;
+    border: 2px solid #8741f1;
+}
+
 div#header-content{
     display: flex;
     flex-direction: column;
-   
     max-width: 40%;
-  
-    margin: 0rem 0rem 0rem 6vw;
+    margin: 0rem 0rem 0rem 9vw;
     
 }
 h3{
@@ -107,12 +115,34 @@ div#container{
 footer{
     background-color: rgba(0, 0, 0, 0.900);
     color: white;
-    width: 100%;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding: 1.5rem 1rem;
 }
+
+div.icons i {
+    padding: 0rem 0.5rem;
+    transition: 400ms;
+    color: white;
+    margin-top: 1rem;
+    
+    
+}
+
+div.icons i:hover{
+    cursor: pointer;
+    color: #8741f1;
+}
+
+h4.email{
+    color: grey;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid grey;
+}
+
 
 
 
@@ -168,7 +198,50 @@ footer{
         justify-content: space-between;
     }
 
+    header{
+        height: 90vh;
+        
+    }
+
+    nav{
+        padding: 2rem 7vw;
+    }
+
+    img{
+        display: none;
+    }
+
   
     
 }
+
+@media (max-width: 530px) {
+
+    header div#header-content{
+        max-width: 90%;
+        padding: 0rem 5vw 0rem 5vw;
+        margin: 0rem;
+    }
+
+    h1{
+        font-size: 38px;
+
+    }
+    div.buttons{
+        margin-top: 3rem;
+        font-size: 14px;
+    }
+
+    div.buttons a {
+        
+        font-size: 14px;
+    }
+
+    header{
+        height: 70vh;
+        
+    }
+    
+}
+
 
